animation hover z-index fix

--- a/hillel_fullstack_homework_animation/ny_line_style.css
+++ b/hillel_fullstack_homework_animation/ny_line_style.css
@@ -44,6 +44,7 @@ body {
 .kf__image_10:hover {
     animation-play-state: paused;
     cursor: grab;
+    z-index: 1000;
 }
 
 .kf__image_01:active,
